examples/invalid/03_wrong_main_end_name.moo
fun badend() -> Bool do
	return false
end-bad

fun main() -> Bool do
	return badend()
end-main